Fix brand being too big & other fixes

--- a/fylo-dark-theme-landing-page/style.scss
+++ b/fylo-dark-theme-landing-page/style.scss
@@ -62,6 +62,17 @@ header {
   }
 }
 
+@media (max-width: 58.625em) {
+  header {
+    .brand {
+      width: 7em;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+
 main {
   background-color: $dark-blue-main-background;
 }
@@ -87,6 +98,7 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  padding: 0 1em;
   .hero__content{
     margin: 0 auto;
     display: flex;
@@ -178,6 +190,14 @@ main {
       img {
         height: 1em;
       }
+    }
+  }
+}
+
+@media (max-width: 58.625em) {
+  .stay-productive {
+    .stay-productive__content {
+      flex-direction: column;
     }
   }
 }
